--- a/wp-content/themes/goodieburger/style.css
+++ b/wp-content/themes/goodieburger/style.css
@@ -97,7 +97,10 @@ q {
     hyphens: none;
     quotes: none;
 }
-
+a{
+    color:white;
+    text-decoration: none;
+}
 a:focus {
     outline: 2px solid #c1c1c1;
     outline: 2px solid rgba(51, 51, 51, 0.3);
@@ -299,16 +302,18 @@ header {
     position: fixed;
     top: -0px;
 
+    z-index: 1;
+
 }
 
 main{
 
-margin-top: 22rem;
+margin-top: 16rem;
 }
 
 nav {
     width: 100%;
-    height: 6rem;
+    height: 8rem;
     background-color: #442b20;
     
 }
@@ -365,10 +370,10 @@ width:100%;
 .logo{
     width: 15rem;
     height: 15rem;
-    margin-top: -4rem;
+    margin-top: -7rem;
     margin-left: auto;
     margin-right: auto;
-    background-image: url("logo.png");
+    background-image: url("img/logo.png");
      background-size: 15rem 15rem;
      border-radius: 15rem;
     -webkit-box-shadow: 0px 10px 40px -4px rgba(0,0,0,0.25);
@@ -419,7 +424,7 @@ width:100%;
 .speciality{
     margin-top: 5rem;
     border: 2.3rem solid transparent;
-    border-image: url(line2.svg) 30 stretch;
+    border-image: url(img/line2.svg) 30 stretch;
 }
 
 .stamp{
@@ -429,7 +434,14 @@ width:100%;
     margin-top: -10rem;
     width: 20rem;
     height: 20rem;
-    background-image: url("stamp.svg");
+    background-image: url("img/stamp.svg");
+}
+
+.newsfeed{
+}
+
+.fb-page{
+    display: block !important;
 }
 
 /* This applies from 800px onwards----------------------------------------------------------------*/
@@ -477,7 +489,7 @@ display:none;
 nav {
     width: 100%;
     height: 18rem;
-    background-image: url("bg.png");
+    background-image: url("img/bg.png");
     background-size: 1100px ;
     
 }
@@ -499,7 +511,6 @@ nav {
     height: 22rem;
     margin-top: -14rem;
      background-size: 22rem 22rem;
-     border-radius: 15rem;
      transform: translate(-200px, 0rem);
  }
 
@@ -605,7 +616,6 @@ footer{
     height: 26rem;
     margin-top: -17rem;
      background-size: 26rem 26rem;
-     border-radius: 15rem;
      transform: translate(-240px, 0rem);
  }
 
