--- a/wp-content/themes/goodieburger/style.css
+++ b/wp-content/themes/goodieburger/style.css
@@ -1,7 +1,9 @@
 /**
  * Table of Contents
  *
- * 1.0 - Reset
+ * 0.0 - Reset
+ * 1.0 - 400 and more
+ * 1.0 - 800 and more
  * 2.0 - Typography
  * 3.0 - Body
 
@@ -114,6 +116,8 @@ a:active {
 a img {
     border: 0;
 }
+
+/****/
 
 
 /** 2.0 Typography */
@@ -316,7 +320,9 @@ header {
 
 main{
 overflow: hidden;
-margin-top: 16rem;
+padding-top: 20rem;
+
+padding-bottom: 8rem;
 width: 100%;
 }
 
@@ -368,12 +374,13 @@ nav {
     width: 70%;
     left: 1rem;
     padding-left: 2rem;
-    font-size: 3rem;
+    font-size: 2.2rem;
 
 }
 
 #contact_box {
    padding: 4rem;
+   margin-top: 0rem;
 
 }
 
@@ -436,13 +443,14 @@ width:100%;
     -webkit-box-shadow: 0px 10px 40px -4px rgba(0,0,0,0.25);
     -moz-box-shadow: 0px 10px 40px -4px rgba(0,0,0,0.25);
     box-shadow: 0px 10px 40px -4px rgba(0,0,0,0.25);
+    transform: scale(1);
+    transition: all 0.3s;
 }
 
-main{
-    width: 100%;
-
-    margin-bottom: 8rem;
+.scale{
+     transform: translate( 0px, -45px ) scale(0.5);
 }
+
 
 .main_inner{
     margin-left: 6rem;
@@ -560,16 +568,16 @@ content:"...... ";
 
 
 .lang-item{
-    width: 4rem;    
-    height: 4rem;
+    width: 3rem;    
+    height: 3rem;
     filter: opacity(1);
-    border: solid white 3px;
     border-radius:50px;
 
 }
 
 .lang-item-en{
     background-image: url('img/en.svg');
+
 
 }
 
@@ -603,19 +611,32 @@ footer{
     position: relative;
 }
 
-.map{
+.map span{
+  position:absolute; 
+  width:100%;
+  height:100%;
+  top:0;
+  left: 0;
+
+  z-index: 1;
+
+  /* fixes overlap error in IE7/8, 
+     make sure you have an empty gif */
+  background-image: url('empty.gif');
+ 
 }
 
 .footer_contact{
-        width:40%;
-        font-size: 2rem;
+        width:100%;
+        font-size: 1.6rem;
         line-height:2rem;
         background-color: rgba(256,256,256, 0.7);
-        padding: 3rem;
+        padding: 1.5rem;
+        margin: 2rem;
         position: absolute;
         right: 3rem;
         bottom: 3rem;
-        z-index: 1;
+        z-index: 2;
 
 }
 
@@ -641,6 +662,76 @@ margin-bottom: 0rem;
 box-shadow: inset 0px 5px 14px 2px rgba(0,0,0,0.1);
     top: 0;
     left: 0;
+}
+
+#author{
+    color: black;
+    position: absolute;
+    z-index: 1;
+    bottom: 0px;
+    font-size: 0.9em;
+    text-align: center;
+    padding-left: 1rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    padding-right: 1rem;
+    background-color: rgba(256,256,256,0.7);
+    display: inline-block;
+}
+
+#author a{
+    color: black;
+
+}
+#author a:visited{
+    color: black;
+
+}
+#author a:active{
+    color: black;
+
+}
+
+select{
+    background:none;
+    color: white;
+    border: none;
+    padding: 1rem;
+
+   -webkit-appearance: none;
+   -moz-appearance: none;
+   appearance: none;
+}
+option{
+    background-color: #4A2519;
+    color: white;
+    border: none;
+    padding: 1rem;
+   -webkit-appearance: none;
+   -moz-appearance: none;
+   appearance: none;
+}
+
+option:hover{
+    background-color: transparent;
+
+}
+
+select:focus{
+    outline:none;
+
+}
+
+.not_found{
+    margin:6rem;
+}
+
+.bwg_slideshow_dots_container_0{
+    display: none !important;
+}
+.bwg_slider_0 span{
+    z-index: 0 !important;
+
 }
 
 /* This applies from 800px onwards----------------------------------------------------------------*/
@@ -731,13 +822,12 @@ nav {
 
 
 main{
+padding-top: 10rem;
 
-    margin-top: 0rem;
-    margin-bottom: 8rem;
+padding-bottom: 8rem;
 }
 
 .main_inner{
-    margin-top: 10rem;
     width: 800px;
     margin-left: auto;
     margin-right: auto;
@@ -776,7 +866,7 @@ main{
 
 .burger_item{
     float: none;
-    margin-top: 6rem;
+    margin-bottom: 6rem;
     width: 100%;
     display: inline-block;
 }
@@ -812,11 +902,12 @@ footer{
 }
 
 .footer_contact{
-        width:20%;
+        width:40%;
+        font-size: 2rem;
+        padding: 3rem;
 
 }
-
-
+}
 /* This applies from 1200px onwards----------------------------------------------------------------*/
 @media only screen and (min-width: 1200px){
 
@@ -828,8 +919,8 @@ h3{
     font-size: 3rem;
 }
 
-#contact_box h2, #contact_boxh3{
-    font-size: 3rem;
+#contact_box h2, #contact_box h3{
+    font-size: 2.8rem;
 
 }
 
@@ -916,8 +1007,11 @@ width:440px;
 
 }
 
+.footer_contact{
+        width:25%;
 
-
+}
+}
 
  /* This applies from 1600px onwards----------------------------------------------------------------*/
 @media only screen and (min-width: 1600px){
@@ -961,6 +1055,11 @@ width:440px;
     margin-right: 40px;
 }
 
+#contact_box h2, #contact_box h3{
+    font-size: 3rem;
+
+}
+
 .logo{
     width: 26rem;
     height: 26rem;
@@ -995,4 +1094,9 @@ width:620px;
     width: 18rem;
     height: 18rem;
 
+}
+
+.footer_contact{
+        width:20%;
+}
 }
