--- a/wp-content/themes/goodieburger/style.css
+++ b/wp-content/themes/goodieburger/style.css
@@ -444,7 +444,7 @@ width:100%;
     -moz-box-shadow: 0px 10px 40px -4px rgba(0,0,0,0.25);
     box-shadow: 0px 10px 40px -4px rgba(0,0,0,0.25);
     transform: scale(1);
-    transition: all 0.3s;
+    transition: all 0.15s;
 }
 
 .scale{
@@ -453,8 +453,8 @@ width:100%;
 
 
 .main_inner{
-    margin-left: 6rem;
-    margin-right: 6rem;
+    margin-left: 3rem;
+    margin-right: 3rem;
 
 }
 
@@ -525,7 +525,7 @@ width:100%;
 .drinks{
     margin-right: auto;
     margin-left: auto;
-    font-size: 3rem;
+    font-size: 1.5rem;
     font-family: 'Noto Serif', serif;        
     margin-bottom: 1rem;
     margin-top: 12rem;
@@ -627,7 +627,7 @@ footer{
 }
 
 .footer_contact{
-        width:100%;
+        width:80%;
         font-size: 1.6rem;
         line-height:2rem;
         background-color: rgba(256,256,256, 0.7);
@@ -879,6 +879,10 @@ padding-bottom: 8rem;
     margin-left: 20px;
     margin-right: 20px;
 
+}
+
+.drinks{
+    font-size: 3rem;
 }
 
 .burger_image img{
